--- a/SpaceX_launches_ML.ipynb
+++ b/SpaceX_launches_ML.ipynb
@@ -237,7 +237,7 @@
    ],
    "source": [
     "# Загружаем датасет\n",
-    "data = pd.read_csv('C:/Users/Vladimir/Coding/CSV_Datasets/For BI/SpaceMissions.csv', parse_dates=True)\n",
+    "data = pd.read_csv('SpaceMissions.csv', parse_dates=True)\n",
     "data.head()"
    ]
   },
